# GTAAudioMetadataTool

./: CMakeLists.txt
src/: main.cc
src/common/: BaseMetadata.hh  BaseTypes.hh  CategoryMetadata.hh  CurvesMetadata.hh  EffectsMetadata.hh  GameMetadata.hh  HashManager.cc  HashManager.hh  IoUtils.hh  MetadataMgr.hh  PlaceholderMetadata.hh  SaveFile.hh  SoundsMetadata.hh  SpeechMetadata.cc  SpeechMetadata.hh  metadata_type.hh
